<resources>
    <string name="app_name">Cookie Clicker</string>
    <string name="clicker">Clicker</string>
    <string name="shop">Shop</string>
    <string name="building_icon">Building icon</string>
    <string name="cookie_icon">Цена</string>

    <string name="cookie_count_label">Печенья:</string>
    <string name="per_second_label">В секунду:</string>
    <string name="time_label">Время:</string>
    <string name="cookie_button">Нажмите, чтобы собрать печенье</string>
    <string name="cookie_count">%.1f печенья</string>
    <string name="per_second">%.1f печений/сек</string>
    <string name="time">Время: %1$s</string>
    <string name="average_speed">Средняя скорость: %.1f п/мин</string>

    <string name="toast_insufficient_cookies">У вас недостаточно печенья для покупки "%1$s"</string>
    <string name="toast_random_message">%1$d печений! Вы великолепны!</string>
    <string name="name">Название</string>
    <string name="_123">123 🍪</string>
    <string name="_15">15</string>
    <string name="cookies_0">Печенье: 0</string>
    <string name="in_second_0">В секунду: 0</string>
    <string name="_4_20">Время: 4:20</string>
    <string name="next_income">Ожидаемый прирост</string>
    <string name="sell">продать</string>
</resources>
